# binance_historical_data

./: .gitignore  README.rst  pyproject.toml
src/binance_historical_data/: data_dumper.py
tests/: test_binance_historical_data.py
typings/char/: __init__.pyi  main.pyi
