[tool.poetry]
name = "binance_historical_data"
version = "0.1.13"
description = ""
authors = ["stanislav <stas.prokopiev@gmail.com>"]
readme = "README.rst"
license="MIT"
repository = "https://github.com/stas-prokopiev/binance_historical_data"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.62.3"
mpire = "^2.3.3"
ipywidgets = "^7.6.5"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.360"
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
